--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   image_picker: ^0.8.6+1
   video_player: ^2.5.1
   video_compress: ^3.1.2
+  timeago: ^3.3.0
+  cached_network_image: ^3.2.3
+  flutter_share: ^2.0.0
 
 dev_dependencies:
   flutter_test:
